@@ -1,5 +1,16 @@
 2021-07-28  Jonathan Bedard  <jbedard@apple.com>
 
+        [webkitcorepy] Fix race condition in TaskPool unittests (follow-up fix)
+        https://bugs.webkit.org/show_bug.cgi?id=227455
+        <rdar://problem/79873003>
+
+        Reviewed by Dewei Zhu.
+
+        * Scripts/libraries/webkitcorepy/webkitcorepy/tests/task_pool_unittest.py:
+        (TaskPoolUnittest.test_invalid_shutdown): Deleted.
+
+2021-07-28  Jonathan Bedard  <jbedard@apple.com>
+
         [ews-build.webkit.org] Verify GitHub integrity in commit queue
         https://bugs.webkit.org/show_bug.cgi?id=228563
         <rdar://problem/81230685>
